Refactoring and clean up