@@ -6,7 +6,6 @@ import org.slf4j.LoggerFactory;
 import org.yaml.snakeyaml.Yaml;
 
 import java.io.IOException;
-import java.nio.charset.StandardCharsets;
 import java.nio.file.Files;
 import java.nio.file.Paths;
 import java.util.HashMap;
@@ -15,13 +14,14 @@ import java.util.Map;
 public class ExperienceLoader {
     private static final Logger log = LoggerFactory.getLogger(ExperienceLoader.class);
 
+    @SuppressWarnings("unchecked")
     public static Map<Integer, Integer> loadExperienceTable()
     {
         Map<Integer,Integer> experienceTable = new HashMap<>();
         
         String experienceYaml;
         try {
-            experienceYaml = new String(Files.readAllBytes(Paths.get(Config.DATAPACK_PATH + "stats/experience_table.yaml")), StandardCharsets.UTF_8);
+            experienceYaml = Files.readString(Paths.get(Config.DATAPACK_PATH + "stats/experience_table.yaml"));
         } catch (IOException e)
         {
             log.error("Can't read experience file.");
